<resources>
    <string name="app_name">SMILE</string>
    <string name="comands">Команды</string>
    <string name="more_comands">Много разных функций</string>
    <string-array name="group_array">
        <item>Управление расписанием</item>
        <item>Образовательные функции</item>
        <item>Безопасность</item>
        <item>Развлекательные/прочие</item>
    </string-array>
    <string-array name="group_roles">
        <item>Для родителей</item>
        <item>Для ребенка</item>
    </string-array>
    <string name="preference_file_key">SMILE_FACE_APP</string>
    <string name="auth_title">Добро пожаловать!</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_fio">ФИО</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="switch_to_register">Нет аккаунта? Зарегистрироваться</string>
    <string name="comment_for_kids">Регистрация для родителей. \n Если ты ребенок, попроси родителя зарегистрировать тебя в его личном кабинете.</string>
    <string name="button_no_internet">Пользоваться без Интернета/Анонимно</string>
    <string name="radio_btn_kid">Я ребенок</string>
    <string name="radio_btn_parent">Я родитель</string>
    <string name="login_failed">Неверный логин или пароль</string>
    <string name="register_failed">Username занят другим пользователем</string>
    <string name="server_error">Произошла ошибка. Попробуйте позже</string>
    <string name="login_success">Успешный вход</string>
    <string name="register_success">Успешная регистрация</string>
    <string name="hint_login_email">Адрес почты</string>
    <string name="auth_title_again">Добро пожаловать снова!</string>
    <string name="network_error">Ошибка соединения</string>
    <string name="switch_to_login">Уже есть аккаунт? Войти</string>
    <string name="template_welcome_parent">Здравствуйте, %1$s!</string>
    <string name="your_kids_text">Ваши дети:</string>
    <string name="add_kid">➕ Добавить ребёнка</string>
    <string name="logout">Выйти</string>
    <string name="tasks_count">📋 %1$d задачи</string>
    <string name="template_name_kid">Имя ребёнка</string>
    <string name="template_username_kid">\@%1$s</string>
    <string name="template_count_tasks_kid">📋 %1$d задачи</string>
    <string name="error_text_parent">Нет соединения</string>
    <string name="button_logout_hint">Кнопка выхода</string>
    <string name="register_kid">Регистрация ребенка</string>
    <string name="register_kid_error">Такой username уже занят</string>
    <string name="name_of_kid_tasks">Ребёнок: %1$s</string>
    <string name="tasks_count_for_parent">Всего задач: %1$d</string>
    <string name="add_task_button">➕ Добавить задачу</string>
    <string name="comment_for_parent_task">Зажмите и удерживайте задачу, чтобы удалить её.</string>
    <string name="delete_task_hint">Удалить задачу</string>
    <string name="template_time_task">00:00</string>
    <string name="template_name_task">Задача</string>
    <string name="task_added">Задание добавлено</string>
    <string name="task_deleted">Задание удалено</string>
    <string name="fragment_title_new_task">Новая задача</string>
    <string name="fragment_name_task_hint">Название задачи</string>
    <string name="fragment_time_task_hint">Время (HH:MM)</string>
    <string name="fragment_task_cancel">Отмена</string>
    <string name="fragment_task_save">Сохранить</string>
    <string name="command_tasks_show">список задач</string>
    <string name="anon_mode">Вы в анонимном режиме</string>
    <string name="dialog_you">"Ты: "</string>
    <string name="dialog_smile">"СМАЙЛИК: "</string>
    <string name="intent_speech_comment">Скажите команду</string>
    <string name="intent_speech_error">Произошла ошибка при распозновании</string>
    <string name="tts_init_hello">Привет! Чем могу сегодня помочь?</string>
    <string name="command_list_tasks_list">Список задач</string>
    <string name="command_list_notification_on">Включить уведомления</string>
    <string name="command_list_notification_off">Выключить уведомления</string>
    <string name="command_list_ai_tall">Разговор с ИИ</string>
    <string name="command_list_add_sos_number">Добавить сос-номер</string>
    <string name="command_list_radio_on">Включи радио</string>
    <string name="command_list_radio_off">Выключи радио</string>
    <string name="triggered_wake_word">Я тебя слушаю</string>
    <string name="tutorial_command_list">Информация: Список команд можно открыть по кнопке в левом нижнем углу</string>
    <string name="dialog_tutorial_2">Нужную команду можно выбрать из списка, либо сказать \"СМАЙЛИК\", чтобы он тебя выслушал</string>
    <string name="command_notification_on">включить уведомления</string>
    <string name="command_notification_off">выключить уведомления</string>
    <string name="dialog_notification_setting">Выключить уведомления ты можешь перейдя в настройки приложения</string>
    <string name="command_radio_on">включи радио</string>
    <string name="dialog_radio_turn_on">Включаю радио</string>
    <string name="command_radio_turn_off">выключи радио</string>
    <string name="command_add_phone_number">добавить сос-номер</string>
    <string name="command_add_phone_number2">добавить сос номер</string>
    <string name="dialog_number_added">Номер задан</string>
    <string name="dialog_number_failed">Не удалось задать номер. Используйте формат: добавить сос-номер +79123456789</string>
    <string name="dialog_reminder_failed">Не удалось создать напоминание. Скажите, о чём напомнить</string>
    <string name="dialog_reminder_success">Напоминание %1$s установлено на %2$s</string>
    <string name="dialog_smile_loading_ai">*СМАЙЛИК ДУМАЕТ*</string>
    <string name="dialog_ai_error">Извините, произошла ошибка. Попробуйте позже.</string>
    <string name="dialog_radio_turn_off">Выключаю радио</string>
    <string name="toast_tasks_update">Задания обновлены</string>
    <string name="toast_task_added_success_kid">Задача добавлена!</string>
    <string name="toast_task_deleted_success_kid">Задача удалена</string>
    <string name="enter_command">Введите команду</string>
    <string name="hint_microphone">Поговорить со СМАЙЛИКОМ</string>
    <string name="hint_list_commands">Список команд</string>
    <string name="hint_send_command">Отправить команду</string>
    <string name="my_tasks_title">Мои задачи</string>
    <string name="button_add_task_kid">Добавить задачу</string>
    <string name="button_back_task_kid">Назад</string>
    <string name="toast_noname_error">Произошла неизвестная ошибка</string>
</resources>