<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_logout_hint"
        android:layout_gravity="start"
        android:src="@drawable/baseline_logout_24" />

    <TextView
        android:id="@+id/tv_kid_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_kid_tasks"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tv_tasks_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_count_for_parent"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_text_kid_tasks"
        android:text="@string/error_text_parent"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary_blue"
        android:padding="14dp"
        android:text="@string/add_task_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp" />

</LinearLayout>